<resources>

    <string name="app_name">WaiterDroid</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">WaiterDroid</string>
    <string name="title_activity_menuprod">Menu</string>
    <string name="title_activity_pedido">Pedido</string>
    <string name="title_activity_carrinho">Carrinho</string>
    <string name="title_activity_produto_carrinho">Produto no Carrinho</string>
    <string name="title_activity_finalizar">Finalizar</string>
    <string name="title_activity_dados_cliente">DadosCliente</string>
    <string name="title_activity_mudar_ip">Mudar IP</string>
    
    <string name="tvLogin">Login: </string>
    <string name="tvSenha">Senha: </string>
    <string name="tvMesa">Mesa: </string>
    <string name="tvMudarIP">IP do servidor: </string>
    
    <string name="btEntrar">Entrar</string>
    <string name="btMudarIP">Mudar IP</string>
    <string name="btEnviar">Enviar</string>
    <string name="btCarrinho">Ver carrinho</string>
    <string name="btFinalizar">Finalizar</string>
    <string name="btSair">Sair</string>
    <string name="btAddProduto">Adicionar</string>
    <string name="btVoltar">Voltar</string>
    <string name="btRetirar">Retirar</string>
    <string name="btConfirmar">Confirmar</string>
    
    <string name="etQuantPedido">Quantidade</string>
    
     <string name="ipHint">192.168.0.189</string>

</resources>