<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/btVoltarIP"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="voltar"
        android:text="@string/btVoltar" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btVoltarIP"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tvMudarIP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="86dp"
                android:text="@string/tvMudarIP" />

            <EditText
                android:id="@+id/etMudarIP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tvMudarIP"
                android:layout_alignBottom="@+id/tvMudarIP"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/tvMudarIP"
                android:ems="10"
                android:hint="@string/ipHint" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/btMudarIP"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etMudarIP"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:onClick="mudarIP"
                android:text="@string/btMudarIP" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>