<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <ListView
        android:id="@+id/listaProds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btCarrinho"
        android:layout_above="@+id/btSair" >

    </ListView>

    <Button
        android:id="@+id/btCarrinho"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/btCarrinho"
        android:onClick="carrinho" />

    <Button
        android:id="@+id/btSair"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/btSair"
        android:onClick="sair" />

    <Button
        android:id="@+id/btFinalizar"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/btFinalizar"
        android:onClick="finalizar" />

    <TextView
        android:id="@+id/tvNomeCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:textSize="20dp" />

</RelativeLayout>