<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/btMudarIp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="mudarIP"
        android:text="@string/btMudarIP" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btMudarIp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/tvLogin"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/etLogin"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvLogin"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:inputType="textEmailAddress" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/tvSenha"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etLogin"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/tvSenha"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/etSenha"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvSenha"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btEntrar"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etSenha"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:onClick="entrar"
                android:text="@string/btEntrar" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>